test: Melhorando testes do service de montly budget e alterando classe de domínio.